--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,8 +14,6 @@ services:
     container_name: pi-iv-scrappers
     build:
       context: scrappers
-    ports:
-      - 3001:3001
     environment:
       DB_URL: mongodb://admin:admin@database:27017/
       DB_NAME: 'pi-iv'
@@ -31,9 +29,9 @@ services:
   #   depends_on:
   #     - db
 
-  front-end:
-    container_name: pi-iv-front-end
-    build:
-      context: front-end
-    ports:
-      - 8080:8080
+  # front-end:
+  #   container_name: pi-iv-front-end
+  #   build:
+  #     context: front-end
+  #   ports:
+  #     - 8080:8080
