--- a/scrappers/Dockerfile
+++ b/scrappers/Dockerfile
@@ -1,8 +1,6 @@
 FROM python:3
 
 COPY . .
-
-RUN pip install --upgrade pip
-RUN pip install --no-cache-dir -r requirements.txt
+RUN pip install -r requirements.txt
 
 CMD ["python", "-u", "src/main.py"]
