--- a/front-end/Dockerfile
+++ b/front-end/Dockerfile
@@ -1,7 +1,9 @@
 FROM node:14.18.0 as build
 
 COPY . .
-RUN yarn build
-RUN yarn global add serve
 
+RUN yarn install
+RUN yarn build
+
+RUN yarn global add serve
 CMD ["serve", "-s", "build", "-l", "8080"]
