--- a/scrappers/Dockerfile
+++ b/scrappers/Dockerfile
@@ -1,6 +1,16 @@
 FROM python:3
 
-COPY . .
-RUN pip install -r requirements.txt
+RUN apt update
+RUN apt -y install cron
 
-CMD ["python", "-u", "src/main.py"]
+WORKDIR /app
+
+COPY crontab /etc/cron.d/crontab
+RUN chmod 0644 /etc/cron.d/crontab
+RUN /usr/bin/crontab /etc/cron.d/crontab
+
+COPY src /app/src
+COPY requirements.txt /app/
+RUN pip3 install -r /app/requirements.txt
+
+CMD ["cron", "-f"]
