--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,9 +36,9 @@ services:
   #   depends_on:
   #     - db
 
-  # front-end:
-  #   container_name: pi-iv-front-end
-  #   build:
-  #     context: front-end
-  #   ports:
-  #     - 8080:8080
+  front-end:
+    container_name: pi-iv-front-end
+    build:
+      context: front-end
+    ports:
+      - 8080:8080
