--- a/scrappers/Dockerfile.scrappers
+++ b/scrappers/Dockerfile.scrappers
@@ -9,8 +9,7 @@ COPY crontab /etc/cron.d/crontab
 RUN chmod 0644 /etc/cron.d/crontab
 RUN /usr/bin/crontab /etc/cron.d/crontab
 
-COPY src /app/src
-COPY requirements.txt /app/
+COPY . /app
 RUN pip3 install -r /app/requirements.txt
 
 CMD ["cron", "-f"]
