--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,7 +30,7 @@ services:
   api:
     container_name: pi-iv-api
     ports:
-    - "5001:5001"
+    - 5001:5001
     build:
       context: api
     environment:
@@ -39,18 +39,9 @@ services:
     depends_on:
       - database
 
-  # back-end:
-  #   container_name: pi-iv-back-end
-  #   build:
-  #     context: back-end
-  #   ports:
-  #     - 3000:3000
-  #   depends_on:
-  #     - db
-
-  front-end:
-    container_name: pi-iv-front-end
+  web:
+    container_name: pi-iv-web
     build:
-      context: front-end
+      context: web
     ports:
       - 8080:8080
