--- a/web/package.json
+++ b/web/package.json
@@ -3,12 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "antd": "^4.17.2",
+    "axios": "^0.24.0",
+    "faker": "^5.5.3",
+    "lodash": "^4.17.21",
+    "node-sass": "4.14.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-indiana-drag-scroll": "^2.1.0",
+    "react-redux": "^7.2.6",
+    "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
+    "recharts": "^2.1.6",
+    "redux": "^4.1.2",
+    "redux-saga": "^1.1.3",
+    "reduxsauce": "^1.2.1",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
